@@ -20,6 +20,7 @@ address-edit: improvement for actions=decommisssion - extend interface (ethernet
 address-edit: new filter '(value string.regex /[SEARCH-STRING]/)'
 upload-config: extend in=api://[MGTM-IP]/panorama-pushed-config to download panorama pushed config
 rule-edit: introduce hip-profile for actions=display
+rule-edit: new action "logsetting-set-FastAPI:[LOGFORWARD]"
 
 utils(under development):
 ike: new script to show all IKE/IPsec profile and config settings
